fix superscript alignment & spacing.

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -141,7 +141,7 @@ a {
   &.internal {
     text-decoration: none;
     background-color: var(--highlight);
-    padding: 0.2rem 0.4rem;
+    padding: 0.2em 0.4em;
     margin: 0.8em 0;
     border-radius: 5px;
     line-height: 1.4rem;
